        * cp-lang.c (cxx_types_compatible_p): To the middle-end,         references and pointers are compatible.

PR middle-end/15885
        * gimplify.c (gimplify_arg): New fn, split out from...
        (gimplify_call_expr): Here.  Special-case BUILT_IN_VA_START.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@84782 138bc75d-0d04-0410-961f-82ee72b054a4